Fixes the name (Liethof -> Liethoff)

--- a/index.haml
+++ b/index.haml
@@ -5,10 +5,10 @@
 
     %meta(charset="utf-8")
 
-    %title Robert Liethof
-    %meta(name="description" content="Robert Liethof - voice and movement training")
+    %title Robert Liethoff
+    %meta(name="description" content="Robert Liethoff - voice and movement training")
     %meta(name="keywords" content="voice movement training Berlin Amsterdam")
-    %meta(name="author" content="Robert Liethof")
+    %meta(name="author" content="Robert Liethoff")
 
     %meta(name="viewport" content="width=device-width initial-scale=1")
     %meta(name="HandheldFriendly" content="True")
@@ -46,7 +46,7 @@
 
     %header#top
       %a(href='#home')
-        %h1 Rob Liethof
+        %h1 Rob Liethoff
         %h2 Voice and Movement Training
 
     %nav#nav
@@ -132,9 +132,9 @@
         :markdown
           # Contact
 
-          You can get in touch [via email](mailto:robliethof@gmail.com?subject=I would like more information)
+          You can get in touch [via email](mailto:rliethoff@gmail.com?subject=I would like more information)
 
-          ![Rob Liethof](img/robliethof.jpg)
+          ![Rob Liethof](img/rliethoff.jpg)
 
     -# JS
     -# ==========================================================================
