--- a/src/application.scss
+++ b/src/application.scss
@@ -133,5 +133,11 @@ section {
     &:target { color: inherit; }
     &:hover { color: #666; }
   }
+
+  #contact img {
+    max-width: 50%;
+    display: block;
+    margin: auto;
+  }
 }
 
