Revert "Changes the link colour slightly"
This reverts commit fad9c2a678cd1b4ae855d6a47d8e60c38bc28123.

--- a/index.haml
+++ b/index.haml
@@ -61,10 +61,6 @@
           list-style: circle;
         }
 
-        a {
-          color: rgb(47, 47, 151);
-        }
-
         header {
           a {
             display: block;
@@ -182,9 +178,8 @@
   %body
     %header#top
       %a(href='#home')
-        :markdown
-          # Rob Liethoff
-          ## Voice & Movement Training
+        %h1 Rob Liethoff
+        %h2 Voice and Movement Training
 
     %nav#nav
       %ul
