Don't float the portrait

--- a/index.haml
+++ b/index.haml
@@ -167,7 +167,7 @@
           }
 
           @mixin portrait {
-            float: none;
+            float: none !important;
             max-width: 50%;
             display: block;
             margin: auto;
